# gc-monitor

./: .gitignore  CODE_REVIEW.md  GRAFANA_EXPORT_ARCHITECTURE.md  Makefile  PYPERF_HOOK_PLAN.md  QWEN.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
.qwen/agents/: documentation-writer.md  modern-python-expert.md  python-architect.md  python-code-reviewer.md  python-expert.md  python-microservices-architect.md  python-reviewer.md  python-typing-expert.md
examples/: analyze_gc_metrics.py  chrome_trace_example.py  pyperf_advanced_example.py  pyperf_benchmark_example.py
src/examplepkg/: __init__.py
src/gc_monitor/: __init__.py  __main__.py  _gc_monitor.py  _gc_monitor.pyi  _process_terminator.py  _runner.py  _utils.py  chrome_trace_exporter.py  cli.py  core.py  exporter.py  fallback.py  jsonl_exporter.py  monitor_thread.py  protocol.py  pyperf_exporter.py  pyperf_hook.py  socket_server.py  stdout_exporter.py
tests/: conftest.py  helpers.py  socket_helpers.py  test_chrome_trace.py  test_cli.py  test_example.py  test_jsonl_exporter.py  test_monitor_thread.py  test_process_terminator.py  test_pyperf_hook.py  test_run_command.py  test_runner.py  test_socket_server.py  test_stdout_exporter.py
