[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gc-monitor"
version = "0.1.0"
description = "GC Monitor - a modern Python packaging skeleton"
readme = "README.md"
license = "MIT"
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "gc_monitor", from = "src" }
]
homepage = "https://example.com"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.urls]
Homepage = "https://example.com"
