[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gc-monitor"
version = "0.1.0"
description = "GC Monitor"
readme = "README.md"
license = "MIT"
authors = ["Sergey Miryanov <sergey.miryanov@gmail.com>"]
packages = [
  { include = "gc_monitor", from = "src" }
]

[tool.poetry.scripts]
gc-monitor = "gc_monitor.cli:main"

[tool.poetry.plugins."pyperf.hook"]
gc_monitor = "gc_monitor.pyperf_hook:gc_monitor_hook"

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pyperf = "^2.10.0"
pyright = "^1.1.408"
mypy = "^1.19.1"
typing-extensions = "^4.15.0"

[tool.poetry.urls]
Homepage = "https://example.com"

# =============================================================================
# Type Checking Configuration
# =============================================================================

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]
strictListInference = true
strictDictionaryInference = true
strictParameterNoneValue = true
enableTypeIgnoreComments = false
reportAny = "warning"
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownMemberType = "error"
reportUnknownVariableType = "error"
reportMissingTypeStubs = "warning"
reportPrivateImportUsage = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnusedFunction = "warning"
reportUnusedClass = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "error"
reportInconsistentConstructor = "error"
reportImplicitStringConcatenation = "warning"
reportImplicitOverride = "error"
reportPropertyTypeMismatch = "error"
reportSelfClsParameterName = "error"

# Note: reportMissingImports set to "warning" to allow optional _gc_monitor C extension
# The stub file (_gc_monitor.pyi) provides types when the module is available
reportMissingImports = "warning"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["tests.*", "conftest"]
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
tmp_path_retention_policy = "failed"
